
noinst_LIBRARIES	= libjansson.a

libjansson_a_SOURCES	= \
			  config.h		\
			  jansson_config.h	\
			  dump.c		\
			  hashtable.c		\
			  hashtable.h		\
			  jansson.h		\
			  jansson_private.h	\
			  load.c		\
			  strbuffer.c		\
			  strbuffer.h		\
			  utf.c			\
			  utf.h			\
			  util.h		\
			  value.c		\
			  memory.c		\
			  error.c

