EXTRA_DIST = jansson.def

include_HEADERS = jansson.h jansson_config.h

noinst_LIBRARIES	= libjansson.a

libjansson_a_SOURCES	= \
			  dump.c		\
			  error.c		\
			  hashtable.c		\
			  hashtable.h		\
			  jansson_private.h	\
			  load.c		\
			  memory.c		\
			  pack_unpack.c		\
			  strbuffer.c		\
			  strbuffer.h		\
			  strconv.c 		\
			  utf.c			\
			  utf.h			\
			  value.c
